Add metering
