# ClearArchitecture/Tibis.Application/ProductManagement/Queries/GetProductByNameRequest.cs
@@ -1,0 +1,6 @@
+﻿using MediatR;
+using Tibis.Application.ProductManagement.Models;
+
+namespace Tibis.Application.ProductManagement.Queries;
+
+public record GetProductByNameRequest(string Name) : IRequest<ProductDto>;
