# ClearArchitecture/Tibis.Facade.Web/Models/DemoDataDto.cs
@@ -1,4 +1,7 @@
-﻿namespace Tibis.Facade.Web.Models
+﻿using Tibis.Application.AccountManagement.Models;
+using Tibis.Application.ProductManagement.Models;
+
+namespace Tibis.Facade.Web.Models
 {
-    public record DemoDataDto(Guid AccountId, Guid ProductId, Guid SubscriptionId);
+    public record DemoDataDto(ProductDto Product, AccountDto Account, Guid SubscriptionId);
 }
